# px4xplane

./: .gitattributes  .gitignore  .gitmodules  .mailmap  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  ConnectionManager.cpp  ConnectionManager.h  CUsersp30plsourcerepospx4xplanetemp_log_analysis.txt  DataRefManager.cpp  DataRefManager.h  Hello-World-SDK-3.vcxproj  JOURNEY_LOG.md  LICENSE  MAVLinkManager.cpp  MAVLinkManager.h  Makefile  Makefile.linux  Makefile.macos  Makefile.windows  README.md  VERSIONING.md  configReader.cpp  mag_test.cpp  mag_test.py  px4-xplane.filters  px4-xplane.sln  px4-xplane.vcxproj  px4xplane.cpp  report_v13.md  resource.h  structs.cpp  test.py
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
aircraft/: README.md
aircraft/QuadTailsitter/: QuadTailsitter.acf  QuadTailsitter_prefs.txt  README.md
aircraft/QuadTailsitter/Airfoil/: NACA 0010 (symmetrical).afl  NACA 0012 (symmetrical).afl  NACA 2412 (popular).afl
config/: alia250_px4.params  cessna172_px4.params  config.ini  config_schema.json  ehang184_px4.params  quadricopter_px4.params  standard_plane_px4.params
config/px4_params/: 5001_xplane_cessna172  5002_xplane_tb2  5010_xplane_ehang184  5020_xplane_alia250  5021_xplane_qtailsitter  README.md
docs/: ALIA_XPLANE12_TEST.md  BUILD.md  BUILD_SYSTEM.md  CESSNA172_XPLANE12_TEST.md  DEVELOPER.md  EHANG184_XPLANE12_TEST.md  GITHUB_ACTIONS.md  QUADTAILSITTER_XPLANE12_TEST.md  TB2_XPLANE12_TEST.md  config-editor.html  custom-airframe-config.md  index.md  v1.0.0.html  v1.html  v2.md
docs/assets/: config-editor.js
docs/developer/: config-schema.md
docs/plans/: 2026-05-07-alia-demo-readiness-plan.md
docs/reports/: report_v12.md  report_v14.md  report_v15.md  report_v16.md  report_v17.md  report_v18.md  report_v19.md  report_v20.md  report_v21.md  report_v22.md  report_v23.md  report_v24.md  report_v25.md  report_v26.md  report_v27.md  report_v28.md  report_v29.md  report_v30.md  report_v31.md  report_v32.md  report_v33.md  report_v34.md  report_v35.md  report_v36.md  report_v37.md  report_v38.md  report_v39.md  report_v40.md  report_v41.md  report_v42.md  report_v43.md  report_v44.md  report_v45.md  report_v46.md  report_v47.md  report_v48.md  report_v49.md  report_v50.md  report_v51.md  report_v52.md  (+29 more)
include/: AccelCalibration.h  ActuatorSafety.h  ConfigManager.h  ConnectionManager.h  ConnectionStatusHUD.h  DataRefManager.h  DataRefProvider.h  FPSMonitor.h  FilterUtils.h  MAVLinkManager.h  SensorBuffer.h  SensorInterpolator.h  TimeManager.h  TimestampProvider.h  UIConstants.h  UIHandler.h  VersionInfo.h  configReader.h
setup/: setup_px4_sitl.sh
src/: AccelCalibration.cpp  ActuatorSafety.cpp  ConfigManager.cpp  ConnectionManager.cpp  ConnectionStatusHUD.cpp  DataRefManager.cpp  FPSMonitor.cpp  MAVLinkManager.cpp  SensorBuffer.cpp  SensorInterpolator.cpp  TimeManager.cpp  TimestampProvider.cpp  UIConstants.cpp  UIHandler.cpp  configReader.cpp  px4xplane.cpp
tests/: actuator_safety_test.cpp  test_airframe_tools.py  test_config_editor.js  test_replay_truth_capture.py  test_validate_config.py  timestamp_provider_test.cpp
tools/: analyze_qtailsitter_design.py  analyze_ulog_estimator.py  check_px4_airframe_params.py  replay_truth_capture.py  validate_config.py
